--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     </svg>
                 </a>
             </div>
-            <p class="copyright">© 2025 Suved. All rights reserved.</p>
+            <p class="copyright">2025.All rights reserved to SUVED.</p>
         </div>
     </footer>
     
